Add abb wrapper test app

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,3 +98,6 @@ target_link_libraries(wheel_imu_error gtsam wio_factor_lib)
 
 add_executable(wheel_imu_isam app/wheel_imu_isam.cpp)
 target_link_libraries(wheel_imu_isam gtsam gtsam_unstable wio_factor_lib)
+
+add_executable(abb_egm_wrapper_test app/test_abb_egm_wrapper.cpp)
+target_link_libraries(abb_egm_wrapper_test abb_wrapper_lib)
