--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(calib)
+project(wcq_lib)
 
 option(BUILD_SHARED_LIBS "Build shared gtsam library, instead of static" ON)
 
@@ -54,6 +54,15 @@ find_package(TBB 4.4 COMPONENTS tbb tbbmalloc)
 find_package(GTSAM REQUIRED)
 include_directories(${GTSAM_INCLUDE_DIR})
 
+# ros
+find_package(catkin REQUIRED COMPONENTS roscpp)
+catkin_package(
+  CATKIN_DEPENDS roscpp
+)
+include_directories(
+ ${catkin_INCLUDE_DIRS}
+)
+
 # include
 include_directories(include)
 
@@ -100,4 +109,5 @@ add_executable(wheel_imu_isam app/wheel_imu_isam.cpp)
 target_link_libraries(wheel_imu_isam gtsam gtsam_unstable wio_factor_lib)
 
 add_executable(abb_egm_wrapper_test app/test_abb_egm_wrapper.cpp)
-target_link_libraries(abb_egm_wrapper_test abb_wrapper_lib)
+add_dependencies(abb_egm_wrapper_test ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(abb_egm_wrapper_test abb_wrapper_lib ${catkin_LIBRARIES})
