Add: new egm library and camera intrinsic calibration
*new egm libraray and app
*can use fix intrinsic to calibrate T,R

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,7 +2,16 @@ corner_rows: 7
 corner_cols: 10
 cornersize_rows: 3
 cornersize_cols: 3
-fold_path: "/home/yang/Desktop/calib2"
-line_image_path: "/home/yang/Desktop/calib2/light_fold"
-intrinsic_file: "../config/intrinsic.yaml"
+fold_path: "/home/yang/Desktop/calib3"
+line_image_path: ""
 camera_model: 1
+use_intrinsic: false
+fx: 3579.9265
+fy: 3578.2289
+u0: 1188.9616
+v0: 1028.0973
+k1: -0.2315
+k2: 0.2450
+k3: -0.5092
+p1: 0
+p2: 0
