--- a/config/slc_config.yaml
+++ b/config/slc_config.yaml
@@ -2,7 +2,16 @@ corner_rows: 5
 corner_cols: 8
 cornersize_rows: 7.23
 cornersize_cols: 7.23
-fold_path: "/home/yang/Dataset/image_fold3"
-line_image_path: "/home/yang/Dataset/image_fold3/light_fold"
-intrinsic_file: "../config/intrinsic.yaml"
+fold_path: "/home/yang/Dataset/image_fold"
+line_image_path: "/home/yang/Dataset/image_fold/light_fold"
 camera_model: 1
+use_intrinsic: false
+fx: 3579.9265
+fy: 3578.2289
+u0: 1188.9616
+v0: 1028.0973
+k1: -0.2315
+k2: 0.2450
+k3: -0.5092
+p1: 0
+p2: 0
